[package]
name = "WhitelistEngine"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = { version = "0.15" }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "any", "mysql", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
