[package]
name = "WhitelistEngine"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = { version = "0.15.7" }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-native-tls", "any", "mysql", "macros", "migrate", "chrono"] }
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
